<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/menu_pro"
        android:title="@string/profile" />
    <item
        android:id="@+id/nav_earning"
        android:icon="@drawable/wallet"
        android:title="@string/my_earning" />
    <item
        android:id="@+id/nav_cod"
        android:icon="@drawable/cod"
        android:title="@string/cod_order_list" />
    <item
        android:visible="false"
        android:icon="@drawable/bonus"
        android:title="@string/insentive" />
    <item
        android:id="@+id/nav_payment_rep"
        android:icon="@drawable/wallet"
        android:title="@string/payment_report" />
    <item
        android:id="@+id/nav_today_pay"
        android:icon="@drawable/payment"
        android:title="@string/today_s_payment" />
    <item
        android:id="@+id/nav_today_order"
        android:icon="@drawable/order"
        android:title="@string/todays_s_orders" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/orders_history" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />

</menu>
