<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/root"
    android:layout_height="match_parent"
    tools:context=".activity.PaymentReportViewDetail">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_above="@+id/adfsaf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp"
                android:padding="12dp"
                android:id="@+id/back_iv"
                android:tint="@color/white"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/payment_order_details"
                android:textSize="17sp" />

        </LinearLayout>
        <HorizontalScrollView
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:id="@+id/headerScroll"
            android:layout_height="wrap_content">

            <LinearLayout
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:padding="10dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="@dimen/dp_80"
                    android:id="@+id/snoTv"
                    android:textStyle="bold"
                    android:paddingStart="@dimen/dp_10"
                    android:paddingEnd="@dimen/dp_10"
                    android:text="S. no"
                    android:textAllCaps="true"
                    android:gravity="center|start"
                    android:textColor="@android:color/white"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="@dimen/dp_100"
                    android:gravity="center"
                    android:paddingStart="@dimen/dp_10"
                    android:paddingEnd="@dimen/dp_10"
                    android:textStyle="bold"
                    android:text="@string/date"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:layout_height="match_parent"/>

                <TextView
                    android:layout_width="@dimen/dp_100"
                    android:id="@+id/bonustv"
                    android:gravity="center"
                    android:paddingStart="@dimen/dp_10"
                    android:paddingEnd="@dimen/dp_10"
                    android:textStyle="bold"
                    android:text="@string/bonus"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:layout_height="match_parent"/>
                <TextView
                    android:layout_width="150dp"
                    android:id="@+id/orderIdTv"
                    android:gravity="center"
                    android:paddingStart="@dimen/dp_10"
                    android:paddingEnd="@dimen/dp_10"
                    android:textStyle="bold"
                    android:text="Order Id"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:layout_height="match_parent"/>

                <TextView

                    android:layout_width="@dimen/dp_100"
                    android:id="@+id/AmtTv"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:paddingStart="@dimen/dp_10"
                    android:paddingEnd="@dimen/dp_10"
                    android:text="Amount"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:layout_height="match_parent"/>

                <TextView
                    android:layout_width="200dp"
                    android:id="@+id/distanceTv"
                    android:textStyle="bold"
                    android:paddingStart="@dimen/dp_10"
                    android:paddingEnd="@dimen/dp_10"
                    android:gravity="center"
                    android:text="Distance(Km)"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:layout_height="match_parent"/>


                <TextView
                    android:layout_width="150dp"
                    android:id="@+id/paymentModeTv"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:paddingStart="@dimen/dp_10"
                    android:paddingEnd="@dimen/dp_10"
                    android:text="Payment Mode"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:layout_height="match_parent"/>

                <TextView
                    android:layout_width="150dp"
                    android:id="@+id/typeTv"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:paddingStart="@dimen/dp_10"
                    android:paddingEnd="@dimen/dp_10"
                    android:text="Type"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:layout_height="match_parent"/>
                <TextView
                    android:layout_width="150dp"
                    android:id="@+id/actionTv"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:paddingStart="@dimen/dp_10"
                    android:paddingEnd="@dimen/dp_10"
                    android:text="Action"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:layout_height="match_parent"/>

            </LinearLayout>

        </HorizontalScrollView>
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone" />
        <RelativeLayout
            android:id="@+id/relEmptyWL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_80"
                android:layout_centerHorizontal="true"
                android:src="@drawable/empety_notification" />

            <TextView
                android:id="@+id/txt11"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@+id/img1"
                android:layout_centerHorizontal="true"
                android:text="@string/payment_order_details"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt11"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/txt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/empty_noti"
                    android:textColor="@color/gray"
                    />


            </LinearLayout>


        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            tools:listitem="@layout/payement_view_details"
            android:layout_width="match_parent"
            android:id="@+id/rvClub"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/adfsaf"
        android:layout_width="match_parent"
        android:minHeight="@dimen/dp_100"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="@dimen/dp_15"
        android:paddingStart="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_20"
        android:layout_marginBottom="-20dp"
        android:orientation="vertical"
        android:background="@drawable/button_back_enabled">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:padding="7dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="@font/raleway_regular"
                android:text="Order Amount"/>
            <TextView
                android:gravity="end"
                android:padding="7dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/order_amount"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="@font/raleway_regular"
                android:text="Rs.0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:padding="7dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="@font/raleway_regular"
                android:text="Bonus Amount"/>
            <TextView
                android:gravity="end"
                android:padding="7dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/bonus_amount"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="@font/raleway_regular"
                android:text="Rs.0"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:padding="7dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="@font/raleway_regular"
                android:text="Base Income"/>
            <TextView
                android:gravity="end"
                android:padding="7dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/base_income"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="@font/raleway_regular"
                android:text="Rs.0"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:padding="7dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:fontFamily="@font/raleway_regular"
                android:text="Your Salary"/>
            <TextView
                android:gravity="end"
                android:padding="7dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/yoursalary"
                android:textStyle="bold"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:fontFamily="@font/raleway_regular"
                android:text="Rs.0"/>
        </LinearLayout>



    </LinearLayout>


</RelativeLayout>